--- a/app/composer.json
+++ b/app/composer.json
@@ -2,7 +2,8 @@
     "name": "terminator/theisle-rcon",
     "require": {
         "swoole-bundle/swoole-bundle": "^0.22.1",
-        "openswoole/core": "^22.1"
+        "openswoole/core": "^22.1",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
